--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+     :root{
+       --primaryColor:#FF5821;
+    --secondaryColor:#2a1c5a;
+  }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
