--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,12 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css"
+      integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM"
+      crossorigin="anonymous"
+    />
     <title>React App</title>
     <style>
-     :root{
-       --primaryColor:#FF5821;
-    --secondaryColor:#2a1c5a;
-  }
+      :root {
+        --primaryColor: #ff5821;
+        --secondaryColor: #2a1c5a;
+      }
     </style>
   </head>
   <body>
